# GrapefruitOS

./: .gitignore  Cargo.toml  README.md  limine.cfg  run.sh
.cargo/: config.toml  grapefruit_kernel.ld  x86_64-grapefruit.json
src/: acpi.rs  idt.rs  main.rs
src/terminal/: mod.rs
