[package]
name = "grapefruit_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
limine = "0.1.8"
x86_64 = "0.14.9"
uart_16550 = "0.2.18"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]